class字节码信息